Amended styles to fix table overflow breaking footer and hiding content below table

--- a/client/scss/mod-custom.scss
+++ b/client/scss/mod-custom.scss
@@ -443,11 +443,13 @@ dt.govuk-summary-list-mod {
   max-width: 20.5em;
 }
 
-.mod-assign-courts-table {
-  tbody { height: 1px !important; overflow-y: scroll; }
-}
-
 .fixTableHead { 
+
+  thead, tbody tr {
+    display: table;
+    width: 100%;
+    table-layout: fixed; /* even columns width , fix width of table too*/
+  }
 
   thead th { 
     position: sticky; 
@@ -455,20 +457,26 @@ dt.govuk-summary-list-mod {
     z-index: 1;
   }
 
-  table { 
-    display: block;
-    overflow-y: scroll; 
-    max-height: 50rem;
-    border-collapse: collapse;         
-    width: 100%; 
-  }
-
   th { 
     background: govuk-colour("white"); 
   }
 
+  table {
+    display: block;
+    overflow-y: auto;
+    max-height: 50rem;
+    width: auto;
+  }
+
   .govuk-checkboxes__item {
     z-index: 0;
+  }
+}
+
+.mod-assign-courts-table {
+  thead tr th:first-of-type,
+  tbody tr td:first-of-type {
+    width: 1.75rem;
   }
 }
 
